# Applied_robotics

./: README.md
base_controller/: CMakeLists.txt  package.xml
base_controller/launch/: a3.launch
base_controller/src/: controller.cpp
cubic_polynomial_planner/: CMakeLists.txt  package.xml
cubic_polynomial_planner/include/cubic_polynomial_planner/: ActionServer.hpp
cubic_polynomial_planner/launch/: a2.launch  pose_action_server.launch
cubic_polynomial_planner/src/: ActionServer.cpp  planner.cpp  server.cpp
dynamic_controller/: CMakeLists.txt  package.xml
dynamic_controller/config/: config.yaml
dynamic_controller/launch/: joint_controller.launch  pose_controller.launch
dynamic_controller/src/: controller.cpp  controller_IK.cpp
highlevel_controller/: CMakeLists.txt  package.xml
highlevel_controller/config/: a6.yaml  a7-clean-1.yaml  a7-clean-2.yaml
highlevel_controller/include/highlevel_controller/: ActionClient.hpp
highlevel_controller/launch/: a7-clean-1.launch  a7-clean-2.launch  a7.launch  client.launch  pose_controller.launch
highlevel_controller/src/: ActionClient.cpp  client.cpp  controller.cpp  controllerA7.cpp  controller_IK.cpp
highlevel_msgs/: CMakeLists.txt  package.xml
highlevel_msgs/action/: PoseCommand.action
highlevel_msgs/srv/: MoveTo.srv
keyboard_controller/: CMakeLists.txt  package.xml
keyboard_controller/launch/: a1.launch
keyboard_controller/src/: controller.cpp
kinematic_controller/: CMakeLists.txt  package.xml
kinematic_controller/launch/: joint_controller.launch  pose_controller.launch
kinematic_controller/src/: controller_IK.cpp
potential_field_planner/: CMakeLists.txt  package.xml
potential_field_planner/config/: config.yaml
potential_field_planner/launch/: test.launch
potential_field_planner/src/: planner.cpp
