<?xml version="1.0"?>
<package format="2">
  <name>cubic_polynomial_planner</name>
  <version>0.0.0</version>
  <description>The cubic_polynomial_planner package</description>


  <maintainer email="wtc@todo.todo">wtc</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>highlevel_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>highlevel_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>highlevel_msgs</exec_depend>
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
  <depend>gazebo_msgs</depend>
  <depend>actionlib</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
