<?xml version="1.0"?>
<package format="2">
  <name>highlevel_controller</name>
  <version>0.0.0</version>
  <description>The highlevel_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wtc@todo.todo">wtc</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>geometry_msgs</build_depend> -->
  <build_depend>highlevel_msgs</build_depend>
  <build_depend>cubic_polynomial_planner</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>highlevel_msgs</build_export_depend>
  <build_export_depend>cubic_polynomial_planner</build_export_depend>
  <!-- <build_export_depend>geometry_msgs</build_export_depend> -->
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>highlevel_msgs</exec_depend>
  <exec_depend>cubic_polynomial_planner</exec_depend>
  <depend>gazebo_msgs</depend>
  <depend>actionlib</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
