<?xml version="1.0"?>
<package format="2">
  <name>highlevel_msgs</name>
  <version>0.0.0</version>
  <description>The highlevel_msgs package</description>

  <maintainer email="wtc@todo.todo">wtc</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>actionlib_msgs</depend>
	<depend>message_runtime</depend>

  <export>

  </export>
</package>
